--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Estonia&family=Poiret+One&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@100;300;400&family=Estonia&family=Poiret+One&display=swap" rel="stylesheet">
+
+
     <title>React App</title>
   </head>
   <body>
